api/crates/postgres/tests/integration/sources/snapshots/integration__sources__update_by_id____test_context_wrapped_with_external_metadata_succeeds.snap
---
source: crates/postgres/tests/integration/sources/update_by_id.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "external_service_id",
  "external_metadata",
  "external_metadata_extra",
  "created_at",
  "updated_at"
FROM
  "sources"
WHERE
  "id" = $1
FOR UPDATE'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
UPDATE
  "sources"
SET
  "external_service_id" = $1,
  "external_metadata" = $2,
  "external_metadata_extra" = $3,
  "updated_at" = CURRENT_TIMESTAMP
WHERE
  "id" = $4
RETURNING
  "id",
  "external_service_id",
  "external_metadata",
  "external_metadata_extra",
  "created_at",
  "updated_at"'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  "id",
  "slug",
  "kind",
  "name",
  "base_url",
  "url_pattern"
FROM
  "external_services"
WHERE
  "id" = $1'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0
